[package]
name = "bpf-api"
version = "0.1.2"
edition = "2021"
categories = ["api-bindings", "os"]
homepage = "https://github.com/arcjustin/bpf-sys"
keywords = ["linux", "bpf", "instructions", "bytecode", "ebpf" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arcjustin/bpf-sys"
description = "Idomatic Rust bindings for eBPF programs, probes, and maps."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bpf-ins = "0.6.1"
num_cpus = "1.0"

[dev-dependencies]
bpf-script = "0.1"
btf = "0.3"
btf-derive = "0.3"
