[package]
name = "bpf-api"
version = "0.2.0"
edition = "2021"
categories = ["api-bindings", "os"]
homepage = "https://github.com/arcjustin/bpf-api"
keywords = ["linux", "bpf", "instructions", "bytecode", "ebpf" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arcjustin/bpf-api"
description = "Idomatic Rust bindings for eBPF programs, probes, and maps."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.0"

[dev-dependencies]
anyhow = "1.0.66"
bpf-script = "0.1"
btf = "0.3"
btf-derive = "0.3"
clap = { version = "4.0.18", features = ["derive"] }
elf = "0.4.0"
