[package]
name = "bpf-api"
version = "0.2.0"
edition = "2021"
categories = ["api-bindings", "os"]
homepage = "https://github.com/arcjustin/bpf-api"
keywords = ["linux", "bpf", "instructions", "bytecode", "ebpf" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arcjustin/bpf-api"
description = "Idomatic Rust bindings for eBPF programs, probes, and maps."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
num_cpus = "1.0"
thiserror = "1.0.37"

[dev-dependencies]
anyhow = "1.0.66"
bpf-script = "0.5"
bpf-script-derive = "0.5"
btf = "0.4"
clap = { version = "4.0.18", features = ["derive"] }
elf = "0.4.0"
